dist-iter/tests/compile_fail_tests/task_macro_wrong_args/map_chunk_into_iter_wrong_input_type.stderr
error[E0271]: type mismatch resolving `<ThisTask as Task>::In == i32`
 --> tests/compile_fail_tests/task_macro_wrong_args/map_chunk_into_iter_wrong_input_type.rs:6:10
  |
6 |         .dist_map_chunk(map_chunk_task!(
  |          ^^^^^^^^^^^^^^ expected `i32`, found `u32`
  |
note: required by a bound in `DistIterator::{opaque#0}`
 --> src/iter/dist_iterator.rs
  |
  |         T: Task<In = Self::Item, IN = { IN }, OUT = { OUT }>,
  |                 ^^^^^^^^^^^^^^^ required by this bound in `DistIterator::{opaque#0}`
